--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
+
+*{
+	padding: 0;
+	margin: 0; 
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+}
 .title-container{
-	display:flex; 
+	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
