--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,10 @@
 }
 
 .title-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-align: center;
 }
 
+.txt-conatiner{
+   text-align: center;
+   font-weight: 300;
+}
