--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,8 @@
 
 .txt-conatiner{
    text-align: center;
-   font-weight: 300;
+   font-weight: 400;
+   margin-left: 30px;
+   margin-right: 30px;
+   margin-top: 15px;
 }
