--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,5 @@
 .txt-conatiner{
    text-align: center;
    font-weight: 400;
-   margin-left: 30px;
-   margin-right: 30px;
-   margin-top: 15px;
+   margin: 15px 30px 0px 30px;
 }
