--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    font-size: 62.5%;
 }
 
 .title-container{
@@ -15,4 +16,5 @@
    text-align: center;
    font-weight: 400;
    margin: 15px 30px 0px 30px;
+   font-size: ;
 }
