--- a/stands/css/style.css
+++ b/stands/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 
+/** Background and Navigation bar thing**/
 *{
     padding: 0;
     margin: 0;
@@ -45,24 +46,60 @@
 }
 
 .ctn-hero-nav{
-    height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0,0,0,.7)),  url(/Images/jojojobackground.jpg);
-    background-size: cover;
+    height: 15vh;
+    background: linear-gradient(rgba(0, 0, 0, .10), rgba(0,0,0,.10)),  url(/Images/SPgif.gif);
     object-fit: cover;
 }
-/** Background and Navigation bar thing**/
+.hero-section h2{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 7rem;
+    width: 2000px;
+    text-align: center;
+    margin-bottom: 15px;
+    font-family: 'Dosis', sans-serif;
+}
+
+.hero-section{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.body-section{
+    height: 15vh;
+    background: linear-gradient(rgba(0, 0, 0, .10), rgba(0,0,0,.10)),  url(/Images/SPgif.gif);
+    object-fit: cover;
+}
+  
+/**Images**/
 
 .StarPlatinum {
-background-image:linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.3)), url(/Images/StarPlatinum.png);
+background-image:linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.5)), url(/Images/StarPlatinum.png);
 background-size: cover;
 background-position: center;
 }
 
 .new-image{
-    width: 350px;
-    height: 350px;
-    background: #fff;
-    border-radius: 5px;
-    position: relative;
-    cursor: pointer;
+    position: absolute;
+  top: 200px;
+  right: 300px;
+  width: 500px;
+  height: 700px;
+  background-image:linear-gradient(rgba(0, 0, 0, .0), rgba(0,0,0,.0)), url(/Images/StarPlatinumS.png);
+  object-fit: cover;
+  background-size: cover;
+}
+
+.header {
+    color: white;
+    text-align: center;
+}
+
+.content {
+    color: white;
+    display: flex;
+    flex-direction: column;
 }
