--- a/stands/css/style.css
+++ b/stands/css/style.css
@@ -2,12 +2,74 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Redressed&display=swap');
 
-/** Background and Navigation bar thing**/
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+hr.rounded {
+    border-top: 8px solid #bbb;
+    border-radius:5px;
+    width: 800px;
+    margin-left: 250px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+  hr.divider {
+    border-top: 8px solid #bbb;
+    border-radius:5px; 
+  }
+
+.hero-background{
+    height: 50vh;
+    background: linear-gradient(rgba(0, 0, 0, .6), rgba(0,0,0,.6)),  url(/Images/jojojobackground.jpg);
+    background-size: cover;
+    object-fit: cover;
+}
+
+.herotitle{
+    height: 100%;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+}
+.herocontent{
+    height: 50%;
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+}
+.herotitle p{
+    color: #fff;
+    font-size: 1.5rem;
+    width: 1000px;
+    margin-left: 250px;
+    margin-bottom: 0px;
+    font-family: 'Dosis', sans-serif;
+}
+
+.herotitle h2{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 2.5rem;
+    width: 660px;
+    margin-left: 250px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    font-family: 'Dosis', sans-serif;
+}
+.herotitle h3{
+    text-transform: uppercase;
+    color: #fff;
+    font-size: 2rem;
+    width: 660px;
+    margin-left: 250px;
+    margin-bottom: 0px;
+    margin-top: 25px;
+    font-family: 'Dosis', sans-serif;
 }
 
 .nav-bar-ctn a{
@@ -40,66 +102,54 @@
 }
 
 .container-logo img{
-    height: 60px;
+    height: 80px;
     padding-top: 15px;
     margin-left: 40px;
 }
-
-.ctn-hero-nav{
-    height: 15vh;
-    background: linear-gradient(rgba(0, 0, 0, .10), rgba(0,0,0,.10)),  url(/Images/SPgif.gif);
-    object-fit: cover;
-}
-.hero-section h2{
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 7rem;
-    width: 2000px;
+div.gallery {
+    margin: 200px 350px;
+    border: 5px solid #ccc;
+    float: right;
+    width: 510px;
+  }
+  div.gallery img {
+    width: 500px;
+    height: 700px;
+  }
+  
+  div.desc {
+    width: 500px;
     text-align: center;
-    margin-bottom: 15px;
-    font-family: 'Dosis', sans-serif;
-}
-
-.hero-section{
-    height: 100%;
-    display: flex;
+    color: white;
+  }
+  p.desc {
+    width: 500px;
+    text-align: center;
+    color: white;
+  }
+  .hero-image{
+      width: 10px;
+      height: 10px;
+  }
+  .center h2{
+    width: 100vh;
+    height: 3vh;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
-}
-
-.body-section{
-    height: 15vh;
-    background: linear-gradient(rgba(0, 0, 0, .10), rgba(0,0,0,.10)),  url(/Images/SPgif.gif);
-    object-fit: cover;
-}
-  
-/**Images**/
-
-.StarPlatinum {
-background-image:linear-gradient(rgba(0, 0, 0, .3), rgba(0,0,0,.5)), url(/Images/StarPlatinum.png);
-background-size: cover;
-background-position: center;
-}
-
-.new-image{
-    position: absolute;
-  top: 200px;
-  right: 300px;
-  width: 500px;
-  height: 700px;
-  background-image:linear-gradient(rgba(0, 0, 0, .0), rgba(0,0,0,.0)), url(/Images/StarPlatinumS.png);
-  object-fit: cover;
-  background-size: cover;
-}
-
-.header {
-    color: white;
-    text-align: center;
-}
-
-.content {
-    color: white;
     display: flex;
-    flex-direction: column;
-}
+  }
+  .center h3{
+    width: 100vh;
+    height: 3vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
+  
+  .center p{
+    width: 100vh;
+    height: 5vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
