--- a/stands/css/style.css
+++ b/stands/css/style.css
@@ -12,8 +12,9 @@ hr.rounded {
     border-top: 8px solid #bbb;
     border-radius:5px;
     width: 800px;
-    margin-left: 250px;
+    margin: auto;
     margin-top: 30px;
+    
     margin-bottom: 30px;
   }
   hr.divider {
@@ -61,13 +62,13 @@ hr.rounded {
     margin-top: 25px;
     font-family: 'Dosis', sans-serif;
 }
-.herotitle h3{
+.herotitle h4{
     text-transform: uppercase;
     color: #fff;
     font-size: 2rem;
     width: 660px;
     margin-left: 250px;
-    margin-bottom: 0px;
+    margin-bottom: 50px;
     margin-top: 25px;
     font-family: 'Dosis', sans-serif;
 }
@@ -106,50 +107,71 @@ hr.rounded {
     padding-top: 15px;
     margin-left: 40px;
 }
-div.gallery {
-    margin: 200px 350px;
-    border: 5px solid #ccc;
-    float: right;
-    width: 510px;
-  }
+
   div.gallery img {
-    width: 500px;
-    height: 700px;
+    width: 400px;
+    height: 580px;
+    
   }
   
   div.desc {
-    width: 500px;
+    width: 400px;
     text-align: center;
     color: white;
+    border-style: solid;
+    border-width:1.5px;
+    border-color: white;
   }
   p.desc {
-    width: 500px;
+    width: 10px;
     text-align: center;
     color: white;
+    margin-top: 10px;
   }
   .hero-image{
       width: 10px;
       height: 10px;
   }
   .center h2{
-    width: 100vh;
-    height: 3vh;
+
     align-items: center;
     justify-content: center;
     display: flex;
+    margin: auto;
   }
-  .center h3{
-    width: 100vh;
-    height: 3vh;
+  .center h4{
+
     align-items: center;
     justify-content: center;
     display: flex;
+    margin: auto;
+
   }
   
   .center p{
-    width: 100vh;
-    height: 5vh;
+    font-size: 20px;
+    display: flex;
     align-items: center;
     justify-content: center;
+    margin: auto;
+    width: 650px;
+  }
+
+  .center{
+    text-align: center;
+    margin-right: 50px;
+  }
+
+  .gallery{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .all-ctn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5rem;
   }
